# vendetta_practise

./: .gitignore  binary_search.cpp  bst.cpp  cpp  insertion_sort  insertion_sort.cpp  k-nn.cpp  merge_sort.cpp  selection_sort  sin
java/BMI_BMR_API/: build.gradle  settings.gradle
java/BMI_BMR_API/src/main/resources/: application.properties
java/CRUD/: build.gradle
java/CRUD/src/main/resources/: ValidationMessages.properties  ValidationMessages_de.properties  ValidationMessages_it.properties  ValidationMessages_pl.properties  application.properties
java/CRUD/src/main/resources/templates/: index.html  manage-details.html  manage-login.html
java/CodeFormatter/: build.gradle  settings.gradle
java/CodeFormatter/src/main/resources/: application.properties
java/CodeFormatter/src/main/resources/templates/: code.html  error.html  findCode.html  layout.html
java/DataFaker/: build.gradle
java/DataFaker/src/main/resources/static/: dataGenerator.html  style.css
java/Time&BinaryConvertor(Web)/: build.gradle
java/Time&BinaryConvertor(Web)/src/main/resources/static/: intconvertor.html
java/spring_controller_web/src/main/resources/static/: style.css
java/spring_controller_web2/src/main/resources/static/: current-time.html
machine_learning/: k-nn.cpp  perceptron.cpp
physics/: pendular.py  sin.cpp
physics/earth_moon_sun/: CMakeLists.txt  earth_moon_sun.cpp
physics/projectile/: CMakeLists.txt  projectile.cpp
projectile/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  projectile.cpp
(+37 files in other folders)
